# OpenAlexPublicationNetwork

./: README.md  notebook.ipynb  pyproject.toml  root.txt  test.csv
citation_network/: __init__.py  crawler.py  network.py
citation_network/utils/: __init__.py  iterators.py  utils.py
openalexnetwork/: __init__.py  crawler.py  logging_setup.py  network.py
openalexnetwork/utils/: __init__.py  iterators.py
