[tool.poetry]
name = "openalexnetwork"
version = "0.1.6"
description = "Module to build citation networks with OpenAlex"
authors = ["Reza Tabrizi <rtabrizi03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scholarly = "^1.7.11"
openalexnet = "^0.1.2"
pycairo = "^1.27.0"
matplotlib = "^3.10.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
